; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_soc_camera.c_soc_camera_g_crop.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_soc_camera.c_soc_camera_g_crop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { %struct.soc_camera_device* }
%struct.soc_camera_device = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }
%struct.v4l2_crop = type { i32 }
%struct.soc_camera_host = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i32 (%struct.soc_camera_device*, %struct.v4l2_crop*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*, i8*, %struct.v4l2_crop*)* @soc_camera_g_crop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @soc_camera_g_crop(%struct.file* %0, i8* %1, %struct.v4l2_crop* %2) #0 {
  %4 = alloca %struct.file*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.v4l2_crop*, align 8
  %7 = alloca %struct.soc_camera_device*, align 8
  %8 = alloca %struct.soc_camera_host*, align 8
  %9 = alloca i32, align 4
  store %struct.file* %0, %struct.file** %4, align 8
  store i8* %1, i8** %5, align 8
  store %struct.v4l2_crop* %2, %struct.v4l2_crop** %6, align 8
  %10 = load %struct.file*, %struct.file** %4, align 8
  %11 = getelementptr inbounds %struct.file, %struct.file* %10, i32 0, i32 0
  %12 = load %struct.soc_camera_device*, %struct.soc_camera_device** %11, align 8
  store %struct.soc_camera_device* %12, %struct.soc_camera_device** %7, align 8
  %13 = load %struct.soc_camera_device*, %struct.soc_camera_device** %7, align 8
  %14 = getelementptr inbounds %struct.soc_camera_device, %struct.soc_camera_device* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call %struct.soc_camera_host* @to_soc_camera_host(i32 %16)
  store %struct.soc_camera_host* %17, %struct.soc_camera_host** %8, align 8
  %18 = load %struct.soc_camera_host*, %struct.soc_camera_host** %8, align 8
  %19 = getelementptr inbounds %struct.soc_camera_host, %struct.soc_camera_host* %18, i32 0, i32 0
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 0
  %22 = load i32 (%struct.soc_camera_device*, %struct.v4l2_crop*)*, i32 (%struct.soc_camera_device*, %struct.v4l2_crop*)** %21, align 8
  %23 = load %struct.soc_camera_device*, %struct.soc_camera_device** %7, align 8
  %24 = load %struct.v4l2_crop*, %struct.v4l2_crop** %6, align 8
  %25 = call i32 %22(%struct.soc_camera_device* %23, %struct.v4l2_crop* %24)
  store i32 %25, i32* %9, align 4
  %26 = load i32, i32* %9, align 4
  ret i32 %26
}

declare dso_local %struct.soc_camera_host* @to_soc_camera_host(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
